Update config example for new version of monitoring

--- a/config.example.json
+++ b/config.example.json
@@ -10,8 +10,9 @@
     }
   },
   "values": {
-    "domain": "traefik.localhost",
-    "email": "traefik@gmail.com"
+    "whoami.domain": "xxx.xxx",
+    "traefik.domain": "xxx.xxx",
+    "email": "xxx@xxx.xxx"
   },
   "show": {
     "tls": false
